[package]
name = "trapframe"
version = "0.3.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Handle Trap Frame across kernel and user space on multiple ISAs."
homepage = "https://github.com/rcore-os/trapframe-rs"
documentation = "https://docs.rs/trapframe"
readme = "README.md"
keywords = ["no_std", "interrupt", "bare-metal", "x86_64", "riscv"]
categories = ["no-std", "embedded"]
license = "MIT"
repository = "https://github.com/rcore-os/trapframe-rs"
exclude = ["docs", ".idea"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.11"
raw-cpuid = "8.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", rev = "d9794e", features = ["inline-asm"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { git = "https://github.com/rcore-os/aarch64", version = "3.0.1" }