[package]
name = "trapframe"
version = "0.4.3"
authors = ["Runji Wang <wangrunji0408@163.com>", "Jiajie Chen <c@jia.je>"]
edition = "2018"
description = "Handle Trap Frame across kernel and user space on multiple ISAs."
homepage = "https://github.com/rcore-os/trapframe-rs"
documentation = "https://docs.rs/trapframe"
readme = "README.md"
keywords = ["no_std", "interrupt", "bare-metal", "x86_64", "riscv"]
categories = ["no-std", "embedded"]
license = "MIT"
repository = "https://github.com/rcore-os/trapframe-rs"
exclude = ["docs", ".idea"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(all(target_arch = "x86_64", target_os = "none"))'.dependencies]
x86_64 = "0.11"
raw-cpuid = "8.0"
