[package]
name = "uefi"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
x86_64 = "0.8"
uefi = "0.4.3"
uefi-services = "0.2.1"
trapframe = { path = "../.." }
