[package]
name = "uefi"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
log = "0.4"
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }
uefi = { version = "0.38", features = ["global_allocator", "logger", "panic_handler"] }
trapframe = { path = "../.." }
